# mcpserver

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose-net.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  main_v2.py  pyproject.toml
.github/workflows/: docker.yml
src/: clients.py  http_retry.py  runtime.py  settings.py  timezone_utils.py
src/crm/: _crm_http.py  _crm_result.py  _crm_settings.py  _crm_test.py  avaliable_time_for_master.py  crm_avaliable_time_for_master.py  crm_avaliable_time_for_master_list.py  crm_delete_client_record.py  crm_get_client_lessons.py  crm_get_client_records.py  crm_get_client_statistics.py  crm_get_masters.py  crm_prompt.md  crm_record_time.py  crm_reschedule_client_record.py  crm_update_client_info.py  crm_update_client_lesson.py  record_time.py
src/postgres/: db_pool.py  google_sheet_reader.py  postgres_config.py  postgres_create_view.py  postgres_util.py  products_utils.py  update_faq_from_sheet.py  update_products.py  update_products_services.py  update_services_from_sheet.py
src/qdrant/: collections.py  retriever_common.py  retriever_faq_services.py  retriever_product.py  retriver_faq_services.py  retriver_product.py
src/request/: httpservice_call_administator.py  httpservice_call_administrator.py
src/server/: server_common.py  server_registry.py  server_spec_factory.py  server_sse_alena.py  server_sse_alena_v2.py  server_sse_alisa.py  server_sse_alisa_.py  server_sse_alisa_v2.py  server_sse_anastasia.py  server_sse_anastasia_v2.py  server_sse_anisa.py  server_sse_anisa_v2.py  server_sse_annitta.py  server_sse_annitta_v2.py  server_sse_marina_v2.py  server_sse_sofia.py  server_sse_sofia_v2.py  server_sse_valentina.py  server_sse_valentina_v2.py  server_types.py  tools_alena.py  tools_anastasia.py  tools_anisa.py  tools_annitta.py  tools_egoistka.py  tools_marina.py  tools_sofia.py  tools_valentina.py
src/server/archive/: server_sse_alisa.py  server_sse_anastasia.py  server_sse_annitta.py
src/tools/: available_time_for_master.py  avaliable_time_for_master.py  avaliable_time_for_master_list.py  call_administrator.py  class_avaliable_time_for_master.py  class_avaliable_time_for_master_list.py  class_client_records.py  class_product_search_full copy.py  class_product_search_full.py  class_product_search_query.py  delete_client_record.py  faq.py  get_client_lessons.py  get_client_records.py  get_client_statistics.py  lesson_id.py  product_id.py  product_id_list.py  product_search_alisa.py  product_search_anastasia.py  product_search_anisa.py  product_search_annitta.py  product_search_full.py  product_search_query.py  product_search_sofia.py  product_search_sofia_.py  recommendations.py  record_time.py  remember_desired_date.py  remember_desired_time.py  remember_master.py  remember_office.py  remember_product_id.py  remember_product_id_list.py  reschedule_client_record.py  services.py  update_client_info.py  update_client_lesson.py
test/: README.md  test_mcp.py  test_qdrant_retriever.py
