[project]
name = "mcpserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.6.0",
    "langgraph-sdk>=0.1.66",
    "langgraph-checkpoint>=2.0.23",
    "langchain-core>=0.3.68",
    "langchain-openai>=0.3.27",
    "langsmith>=0.4.5",
    "httpx>=0.25.0",
    "uvicorn>=0.35.0",
    "sse-starlette>=2.1.0,<2.2.0",
    "uvloop>=0.18.0",
    "httptools>=0.5.0",
    "jsonschema-rs>=0.20.0",
    "structlog>=24.1.0",
    "cloudpickle>=3.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "anyio>=4.7.0",
    "fastmcp>=2.10.4",
    "grpcio>=1.73.1",
    "pydantic>=2.11.7",
    "qdrant-client>=1.14.3",
    "openai>=1.95.1",
    "uvicorn>=0.35.0",
    "fastembed>=0.7.3"
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pytest>=8.3.5",
    "ruff>=0.8.2",
    "pytest-asyncio>=1.2.0"
]
